--- a/bd.html
+++ b/bd.html
@@ -70,6 +70,6 @@
         <br>
         <div style="text-align:center"><a href="matedit.html" class="w3-btn" style="background-color:#81BEF7">Editar</a></div>
     </div>
-    <script src="js/nav.js"></script>
+    <script async src="js/nav.js"></script>
 </body>
 </html>
