--- a/cadastro3.html
+++ b/cadastro3.html
@@ -52,11 +52,11 @@
             <br><br>
             <div class="doblebut">
                 <div>
-                    <a href="mensagem.html" class="w3-btn butcla">Finalizar</a>
+                    <a href="mensagem.html" class="w3-btn butcla" style="background-color:#81BEF7;float:right;">Finalizar</a>
                 </div>
             </div>
         </div>
     </div>
-    <script src="js/nav.js"></script>
+    <script async src="js/nav.js"></script>
 </body>
 </html>
