--- a/es.html
+++ b/es.html
@@ -40,37 +40,37 @@
             <h2>Frequência</h2>
             <div class="w3-light-grey w3-round-xlarge">
                 <div class="w3-container w3-blue w3-round-xlarge bares">82%</div>
-            </div>
+            </div> 
             <br>
             <h2>Dados</h2>
             <div>
-                <div class="column c1 discnome">
+                <div class="column discnome"style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Nome</h3>
                     <h4>Engenharia de Software</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discsigla">
+                <div class="column discsigla" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Sigla</h3>
                     <h4>ES</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discprof">
+                <div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Professor(a)</h3>
                     <h4>Tiago Telecken</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discsala">
+                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Sala</h3>
                     <h4>Lab 6</h4>
                 </div>
             </div>
         </div>
         <br>
-        <div class="butedit"><a href="matedit.html" class="w3-btn">Editar</a></div>
+        <div style="text-align:center"><a href="matedit.html" class="w3-btn" style="background-color:#81BEF7">Editar</a></div>
     </div>
-    <script src="js/nav.js"></script>
+    <script async src="js/nav.js"></script>
 </body>
 </html>
