--- a/hora.html
+++ b/hora.html
@@ -143,6 +143,6 @@
             </table>        
         </div>
     </div>
-    <script src="js/nav.js"></script>
+    <script async src="js/nav.js"></script>
 </body>
 </html>
