--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
         </div>
-        <script src="js/nav.js"></script>
+        <script async src="js/nav.js"></script>
         <script>if (navigator.serviceWorker.controller) {
                 console.log('[PWA Builder] active service worker found, no need to register')
             } else {
