--- a/lista.html
+++ b/lista.html
@@ -36,44 +36,40 @@
         <div class="corpo">
             <h2 class="h2c">Minhas disciplinas</h2><br>
             <div>
-                <div><a href="mt3.html"><div class="column dados">
+                    <a href="mt3.html"><div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:220px;">
                         <h2>Matemática 3</h2>
                         <p>(Mat3)</p>
                         <p>Prof: Aline Macedo</p>
                         <p>Sala: 408</p>
-                    </div></a></div>
-                    <br><br>
+                </div></a>
             </div>
             <div>
-                <div><a href="es.html"><div class="column dados">
+                <a href="mt3.html"><div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:220px;">
                         <h2>Engenharia de Software</h2>
                         <p>(ES)</p>
                         <p>Prof: Tiago Telecken</p>
                         <p>Sala: Lab6</p>
-                    </div></a></div>
-                    <br><br>
+                    </div></a>
             </div>
             <div>
-                <div><a href="f4.html"><div class="column dados">
+                <a href="mt3.html"><div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:220px;">
                         <h2>Física 4</h2>
                         <p>(Fis4)</p>
                         <p>Prof: Camila Gomes</p>
                         <p>Sala: 408</p>
-                    </div></a></div>
-                    <br><br>
+                    </div></a>
             </div>
             <div>
-                <div><a href="bd.html"><div class="column dados">
+                <a href="mt3.html"><div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:220px;">
                         <h2>Banco de Dados</h2>
                         <p>(BD)</p>
                         <p>Prof: Tiago Moraes</p>
                         <p>Sala: Lab6</p>
-                    </div></a></div>
-                    <br><br>
+                    </div></a>
             </div>
         </div>
-        <div class="otobut"><a href="matedit.html" class="w3-btn">Adicionar Matéria</a></div>
+        <div style="text-align:center"><a href="matedit.html" class="w3-btn" style="background-color:#81BEF7">Nova matéria</a></div>
     </div>
-    <script src="js/nav.js"></script>
+    <script async src="js/nav.js"></script>
 </body>
 </html>
