--- a/matedit.html
+++ b/matedit.html
@@ -42,38 +42,37 @@
             <input type="date" name="" id="">
             <br><br>
             <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-container w3-blue w3-round-xlarge o">.</div>
+                <div class="w3-container w3-blue w3-round-xlarge o" style="width:100%">.</div>
             </div>
             <br>
             <h2>Dados</h2>
             <div>
-                <div class="column c2 discnome">
+                <div class="column c2 discnome" style="background-color:lightgray;width:100%;text-align:left;height:60px;">
                     <label>Nome</label>
                     <input type="text">
                 </div>
             </div>
             <div>
-                <div class="column c2 discsigla">
+                <div class="column c2 discsigla" style="background-color:lightgray;width:100%;text-align:left;height:60px;">
                     <label>Sigla</label>
                     <input type="text">
                 </div>
             </div>
             <div>
-                <div class="column c2 discprof">
+                <div class="column c2 discprof" style="background-color:lightgray;width:100%;text-align:left;height:60px;">
                     <label>Professor(a)</label>
                     <input type="text">
                 </div>
             </div>
             <div>
-                <div class="column c2 discsala">
+                <div class="column c2 discsala" style="background-color:lightgray;width:100%;text-align:left;height:60px;">
                     <label>Sala</label>
                     <input type="text">
                 </div>
             </div>
         </div>
         <br>
-        <div class="ootobut"><a href="lista.html" class="w3-btn">Salvar</a></div>
-    </div>
-    <script src="js/nav.js"></script>
+        <div style="text-align:center"><a href="lista.html" class="w3-btn" style="background-color:#084b60; color:white;">Salvar</a></div> 
+    <script async src="js/nav.js"></script>
 </body>
 </html>
