--- a/material.html
+++ b/material.html
@@ -34,48 +34,32 @@
         </div>
         <!--corpo da home-->
         <div class="corpo">
-            <h2 class="hsc">Minha galeria</h2>
+            <h2 class="h2c">Minha galeria</h2>
             <div class="row2">
                 <div class="column2">
-                    <h2>Minhas matérias</h2>
-                    <p>Veja aqui suas matérias</p>
+                        <img src="pict/img.jpg" alt="img" style="width:100%; height:100%;">
                 </div>
                 <div class="column2">
-                    <div class="column3">
-                        <h2>Meu progresso</h2>
-                        <p>Não perca seu desempenho, consulte seu progresso</p>
-                    </div>
-                    <div class="column3">
-                        <h2>Tarefas</h2>
-                        <p>Perdido nos trabalhos? Aqui você não se perde</p>
-                    </div>
+                        <img src="pict/img.jpg" alt="img" style="width:100%; height:100%;">
                 </div>
                 <div class="column2">
-                    <div class="column3">
-                        <h2>Meu progresso</h2>
-                        <p>Não perca seu desempenho, consulte seu progresso</p>
-                    </div>
-                    <div class="column3">
-                        <h2>Tarefas</h2>
-                        <p>Perdido nos trabalhos? Aqui você não se perde</p>
-                    </div>
+                        <img src="pict/img.jpg" alt="img" style="width:100%; height:100%;">
                 </div>
                 <div class="column2">
-                    <h2>Horários</h2>
-                    <p>Não leve mais o caderno errado, consulte seu horário</p>
+                        <img src="pict/img.jpg" alt="img" style="width:100%; height:100%;">
                 </div>
             </div>
             <br>
             <div class="butf">
                 <div>
-                    <a href="tarefas.html" class="w3-btn" style="background-color:#084B60;color:white;">Cancelar</a>
+                    <a href="tarefas.html" class="w3-btn" style="background-color:#084B60;color:white;">Excluir</a>
                 </div>
                 <div>
-                    <a href="tarefas.html" class="w3-btn ootobut">Salvar</a>
+                    <a href="tarefas.html" class="w3-btn ootobut" style="background-color:#81BEF7;float:right;">Upload</a>
                 </div>
             </div>
         </div>
     </div>
-    <script src="js/nav.js"></script>
+    <script async src="js/nav.js"></script>
 </body>
 </html>
