--- a/mensagem.html
+++ b/mensagem.html
@@ -36,19 +36,18 @@
         <div class="corpo">
             <br><br>
             <div>
-                <div class="column discsigla mn">
-                        <img src="pict/icon.png" alt="" style= "width:55%;height:55%;text-align:center; margin-left:auto; margin-right:auto">
-                    </div>
-
+                    <div class="column discsigla mn" style="background-color:#084B60;text-align:left;height:100px;margin-left:25%; margin-right:25%;">
+                            <img src="pict/icon.png" alt="logo" class="cinco" style="margin-left:25%; margin-right:25%;width:55%;height:55;">
+                        </div>
                         <div class="gf">
                             <h3>Cadastro feito com sucesso!</h3>
                             <br><br>
                             <div style="display:flex;text-align:center;">
                                 <div>
-                                    <a href="index.html" class="w3-btn butesc">Voltar à Home</a>
+                                    <a href="index.html" class="w3-btn butesc" style="background-color:#084B60;color:white;">Voltar à Home</a>
                                 </div>
                                 <div>
-                                    <a href="perfilp.html" class="w3-btn butcla">Ver meus dados</a>
+                                    <a href="perfilp.html" class="w3-btn butcla" style="background-color:#81BEF7;float:right;">Ver meus dados</a>
                                 </div>
                             </div>
                         </div>
@@ -56,6 +55,6 @@
             </div>
         </div>
     </div>
-    <script src="js/nav.js"></script>
+    <script async src="js/nav.js"></script>
 </body>
 </html>
