--- a/perfil.html
+++ b/perfil.html
@@ -36,12 +36,10 @@
         <div class="corpo">
             <br><br>
             <div>
-                <div class="column discsigla mn">
-                    <center>
-                        <img src="pict/icon.png" alt="logo" class="cinco">
-                    </center>
+                <div class="column discsigla mn" style="background-color:#084B60;text-align:left;height:100px;margin-left:25%; margin-right:25%;">
+                        <img src="pict/icon.png" alt="logo" class="cinco" style="margin-left:25%; margin-right:25%;width:55%;height:55;">
                     </div>
-                    <center>
+                    <div style="margin-left:25%; margin-right:25%">
                         <h3>Entre em sua conta</h3>
                         <label for="">User</label>
                         <input type="text" placeholder="username">
@@ -49,18 +47,19 @@
                         <label for="">Password</label>
                         <input type="password" placeholder="password">
                         <br>
-                        <div class="txt">
+                        <br>
+                        <div class="txt" style="display:flex;text-align:center;">
                             <div>
-                                <a href="perfilp.html" class="w3-btn butesc">Entrar</a>
+                                <a href="perfilp.html" class="w3-btn butesc" style="background-color:#084B60;color:white;">Entrar</a>
                             </div>
                             <div>
-                                <a href="cadastro.html" class="w3-btn butcla">Cadastre-se</a>
+                                <a href="cadastro.html" class="w3-btn butcla" style="background-color:#81BEF7;float:right;">Cadastre-se</a>
                             </div>
                         </div>
-                    </center>
+                    </div>
             </div>
         </div>
     </div>
-    <script src="js/nav.js"></script>
+    <script async src="js/nav.js"></script>
 </body>
 </html>
