--- a/perfilp.html
+++ b/perfilp.html
@@ -34,107 +34,108 @@
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
         <!--corpo da home-->
-        <div class="corpo w3-container mn">
+        <div class="corpo w3-container">
             <h2 class="h2c">Minha conta</h2>
             <h2>Dados</h2>
             <div>
-                <div class="column c1 discnome">
+                <div class="column c1 discnome" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>E-mail</h3>
                     <h4>user@user</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discsigla">
+                <div class="column c1 discsigla" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Nome</h3>
                     <h4>User</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discprof">
+                <div class="column c1 discprof" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Idade</h3>
                     <h4>00</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discsala">
+                <div class="column c1 discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Data de nascimento</h3>
                     <h4>dd/mm/aaaa</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discsala">
+                <div class="column c1 discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Estado</h3>
                     <h4>UF</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discsala">
+                <div class="column c1 discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Escolaridade</h3>
                     <h4>X série</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discsala">
+                <div class="column c1 discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Instituição</h3>
                     <h4>xoxo</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discsala">
+                <div class="column c1 discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Curso</h3>
                     <h4>Informática</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discsala">
+                <div class="column c1 discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Estado civil</h3>
                     <h4>solteiro</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discsala">
+                <div class="column c1 discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Apelido</h3>
                     <h4>User</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discsala">
+                <div class="column c1 discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Turma</h3>
                     <h4>0X</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discsala">
+                <div class="column c1 discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Sexo</h3>
                     <h4>Undefined</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discsala">
+                <div class="column c1 discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Matéria preferida</h3>
                     <h4>xoxoxoxo</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discsala">
+                <div class="column c1 discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Universidade dos sonhos</h3>
                     <h4>Animação</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discsala">
+                <div class="column c1 discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <a href="progresso.html"><h2>Meu progresso</h2></a>
                 </div>
             </div>
             <div>
-                <div class="column c1 discsala">
+                <div class="column c1 discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <a href="material.html"><h2>Meu material</h2></a>
                 </div>
             </div>
         </div>
         <br>
-        <div class="otobut"><a href="cadastro.html" class="w3-btn">Editar</a></div>
-    </div>
-    <script src="js/nav.js"></script>
+        <div>
+                <a href="cadastro.html" class="w3-btn butcla" style="background-color:#81BEF7;margin-right:50%;">Editar</a>
+            </div>
+    <script async src="js/nav.js"></script>
 </body>
 </html>
