--- a/tarefas.html
+++ b/tarefas.html
@@ -53,15 +53,11 @@
             </table>
         </div>
         <br>
-        <div class="pd">
-            <div>
-                <a href="#" class="w3-btn butesc">Deletar</a>
-            </div>
-            <div>
-                <a href="newt.html" class="w3-btn but cla">Novo</a>
-            </div>
+        <div style="display:flex;text-align:center;">
+        <div style="text-align:center; margin-left:25%"><a href="#" class="w3-btn" style="background-color:#084b60">Deletar</a></div>
+        <div style="text-align:center; margin-right:25%;"><a href="newt.html" class="w3-btn" style="background-color:#81BEF7">Novo</a></div>        
         </div>
     </div>
-    <script src="js/nav.js"></script>
+    <script async src="js/nav.js"></script>
 </body>
 </html>
