--- a/cadastro.html
+++ b/cadastro.html
@@ -36,9 +36,9 @@
         <div class="corpo">
             <h2 class="h2c">Cadastro</h2>
             <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-container w3-blue w3-round-xlarge barc">1%</div>
+                <div class="w3-container w3-blue w3-round-xlarge barc4">1%</div>
             </div>
-            <br>
+            <br> 
             <label>E-mail</label>
             <input type="email" placeholder="user@user"><br><br>
             <label>Senha</label>
@@ -54,14 +54,14 @@
             <br><br>
             <div class="doblebut">
                 <div>
-                    <a href="cadastro2.html" class="w3-btn butesc">Usar a conta Google</a>
+                    <a href="cadastro2.html" class="w3-btn butesc" style="background-color:#084B60;color:white;">Usar a conta Google</a>
                 </div>
                 <div>
-                    <a href="cadastro2.html" class="w3-btn butcla">Continuar</a>
+                    <a href="cadastro2.html" class="w3-btn butcla" style="background-color:#81BEF7;float:right;">Continuar</a>
                 </div>
             </div>
         </div>
     </div>
-    <script src="js/nav.js"></script>
+    <script async src="js/nav.js"></script>
 </body>
 </html>
