--- a/mt3.html
+++ b/mt3.html
@@ -44,33 +44,33 @@
             <br>
             <h2>Dados</h2>
             <div>
-                <div class="column c1 discnome">
+                    <div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Nome</h3>
                     <h4>Matemática 3</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discsigla">
+                    <div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Sigla</h3>
                     <h4>Mat3</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discprof">
+                    <div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Professor(a)</h3>
                     <h4>Aline Macedo</h4>
                 </div>
             </div>
             <div>
-                <div class="column c1 discsala">
+                    <div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Sala</h3>
                     <h4>408</h4>
                 </div>
             </div>
         </div>
         <br>
-        <div class="butedit"><a href="matedit.html" class="w3-btn">Editar</a></div>
-    </div>
-    <script src="js/nav.js"></script>
+        <div style="text-align:center"><a href="matedit.html" class="w3-btn" style="background-color:#81BEF7">Editar</a></div>
+        </div>
+    <script async src="js/nav.js"></script>
 </body>
 </html>
