--- a/newt.html
+++ b/newt.html
@@ -34,24 +34,25 @@
         </div>
         <!--corpo da home-->
         <div class="corpo">
+            <br>
             <div class="e">
-                <div class="column c3">
+                <div class="column" style="background-color:lightgray;width:100%;height:370px;">
                     <label>Título</label>
-                    <input type="text" placeholder="Título da tarefa">
+                    <input type="text" style="text-align:center;" placeholder="Título da tarefa">
                     <br><br>
                     <textarea name="descricao" id="desc" cols="30" rows="10"></textarea>
-                    <div class="txt">
+                    <div class="txt" style="display:flex;text-align:center;">
                         <div>
-                            <a href="tarefas.html" class="w3-btn butesc">Cancelar</a>
+                            <a href="tarefas.html" class="w3-btn butesc" style="background-color:#084B60;color:white;">Cancelar</a>
                         </div>
                         <div>
-                            <a href="tarefas.html" class="w3-btn butcla">Salvar</a>
+                            <a href="tarefas.html" class="w3-btn butcla" style="background-color:#81BEF7;float:right;">Salvar</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="js/nav.js"></script>
+    <script async src="js/nav.js"></script>
 </body>
 </html>
