--- a/progresso.html
+++ b/progresso.html
@@ -78,6 +78,6 @@
             </table>
         </div>
     </div>  
-    <script src="js/nav.js"></script>
+    <script async src="js/nav.js"></script>
 </body>
 </html>
