--- a/matedit.html
+++ b/matedit.html
@@ -39,7 +39,7 @@
 
             <h2>Frequência</h2>
             <label>Registre faltas</label>
-            <input type="date" name="" id="">
+            <input type="date" name="faltas" id="">
             <br><br>
             <div class="w3-light-grey w3-round-xlarge">
                 <div class="w3-container w3-blue w3-round-xlarge o" style="width:100%">.</div>
