--- a/matedit.html
+++ b/matedit.html
@@ -74,5 +74,6 @@
         <br>
         <div style="text-align:center"><a href="lista.html" class="w3-btn" style="background-color:#084b60; color:white;">Salvar</a></div> 
     <script async src="js/nav.js"></script>
+    </div>
 </body>
 </html>
