--- a/mensagem.html
+++ b/mensagem.html
@@ -37,7 +37,7 @@
             <br><br>
             <div>
                     <div class="column discsigla mn" style="background-color:#084B60;text-align:left;height:100px;margin-left:25%; margin-right:25%;">
-                            <img src="pict/icon.png" alt="logo" class="cinco" style="margin-left:25%; margin-right:25%;width:55%;height:55;">
+                            <img src="pict/icon.png" alt="logo" class="cinco" style="margin-left:25%; margin-right:25%;width:55%;height:55%;">
                         </div>
                         <div class="gf">
                             <h3>Cadastro feito com sucesso!</h3>
