--- a/perfil.html
+++ b/perfil.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png"  alt="logo" style= "width: 100%;"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -37,14 +37,14 @@
             <br><br>
             <div>
                 <div class="column discsigla mn" style="background-color:#084B60;text-align:left;height:100px;margin-left:25%; margin-right:25%;">
-                        <img src="pict/icon.png" alt="logo" class="cinco" style="margin-left:25%; margin-right:25%;width:55%;height:55;">
+                        <img src="pict/icon.png" alt="logo" class="cinco" style="margin-left:25%; margin-right:25%;width:55%;height:55%;">
                     </div>
                     <div style="margin-left:25%; margin-right:25%">
                         <h3>Entre em sua conta</h3>
-                        <label for="">User</label>
+                        <label>User</label>
                         <input type="text" placeholder="username">
                         <br><br>
-                        <label for="">Password</label>
+                        <label>Password</label>
                         <input type="password" placeholder="password">
                         <br>
                         <br>
