--- a/perfilp.html
+++ b/perfilp.html
@@ -137,5 +137,6 @@
                 <a href="cadastro.html" class="w3-btn butcla" style="background-color:#81BEF7;margin-right:50%;">Editar</a>
             </div>
     <script async src="js/nav.js"></script>
+    </div>
 </body>
 </html>
